[metadata]
name = pypeering
version = 0.0.0
author = Marek Isalski
author_email = pypi-pypeering@maz.nu
description = Peering Manager API client library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/faelix/pypeering
project_urls =
    Bug Tracker = https://github.com/faelix/pypeering/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = netbox, peeringmanager, peering, network, automation, bgp

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    simplejson
requires =
    math
    json
    logging
    time
    simplejson

[options.packages.find]
where = src
